--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -1,29 +1,76 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 .header {
   height: 72px;
   background: darkmagenta;
   color: white;
+  font-size: 32px;
+  font-weight: 900;
+  padding: 0 16px;
+  display: flex;
+  align-items: center;
 }
 
 .footer {
   height: 72px;
   background: #eee;
   color: darkmagenta;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .sidebar {
   width: 300px;
   background: royalblue;
   box-sizing: border-box;
+  flex-basis: 300px;
+  flex-shrink: 0;
+  padding: 16px;
+
+  & ul {
+    padding: 0;
+  }
+
+  & li {
+    list-style-type: none;
+  }
+
+  & a {
+    color: white;
+    font-size: 24px;
+    text-decoration: none;
+  }
+}
+
+.main {
+  flex: auto;
+  display: flex;
+}
+
+.cards {
+  display: flex;
+  flex: auto;
+  flex-wrap: wrap;
+  padding: 48px;
+  gap: 24px;
 }
 
 .card {
   border: 1px solid #eee;
-  box-shadow: 2px 4px 16px rgba(0,0,0,.06);
+  box-shadow: 2px 4px 16px rgba(0, 0, 0, .06);
   border-radius: 4px;
+  display: flex;
+  flex-basis: 30%;
+  padding: 16px;
 }
