--- a/intermediate-html-css/positioning-grid/01-basic-holy-grail/style.css
+++ b/intermediate-html-css/positioning-grid/01-basic-holy-grail/style.css
@@ -46,3 +46,24 @@ html {
   color: white;
   text-align: left;
 }
+
+/* SOLUTION */
+
+.container {
+  display: grid;
+  gap: 15px;
+  grid-template: repeat(2, 1fr) 5fr 1fr / 1fr 3fr;
+}
+
+.header, .footer {
+  grid-column: 1 / 3;
+}
+
+.sidebar {
+  grid-column: 1 / 2;
+  grid-row: 2 / 4;
+}
+
+.nav, .article {
+  grid-column: 2 / 3;
+}
